src/objects/Notification__c.object
<CustomObject>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FromUser__c</fullName>
        <label>From User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Text__c</fullName>
        <label>Notification Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isArchivedBySender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Archived By Sender</label>
        <type>Checkbox</type>
    </fields>
    <label>Notification</label>
    <nameField>
        <displayFormat>N-{000000000}</displayFormat>
        <label>Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>